v0.3.2~dev
- better handle rapid fire library updates
- Use persistent notification for progress

v0.3.1 (2016-02-06)
- Python 2.6 support
- Fix preview image for Isengard
- Fix caching on Android
v0.3.0 (2016-02-04)
- Watch for library updates and automatically add artwork for new items
- Add series, season, and movie artwork from Fanart.tv to the library
- Add series and season artwork from TheTVDB
- Add movie and episode (fanart/stills) artwork from The Movie Database
- Select specific artwork for individual media items
- Add all missing artwork for a single item, all items, or new items added since last run